@@ -1,0 +1,3 @@
+The upstream changelog being composed of multiple files with a total size
+of more than 1.5MB, they are provided by the glibc-doc package in the
+/usr/share/doc/glibc-doc/ directory.
