@@ -1,1 +1,4 @@
 ChangeLog*
+nptl/ChangeLog*
+nptl_db/ChangeLog*
+ports/ChangeLog*
