@@ -1,8 +1,4 @@
 BUGS
 FAQ
 NEWS
-PROJECTS
-README 
 hesiod/README.hesiod
-CONFORMANCE
-debian/TODO
