@@ -17,15 +17,9 @@ $(stamp)binaryinst_$(libc)-pic:: $(stamp)debhelper
 	install --mode=0644 build-tree/$(DEB_HOST_ARCH)-libc/libresolv.map debian/$(libc)-pic/usr/lib/libresolv_pic.map
 
 # Some per-package extra files to install.
-define $(libc)_extra_debhelper_pkg_install
-	install --mode=0644 ChangeLog debian/$(curpass)/usr/share/doc/$(curpass)/changelog
-	install --mode=0644 nptl/ChangeLog debian/$(curpass)/usr/share/doc/$(curpass)/ChangeLog.nptl
-endef
-
 define libc-bin_extra_debhelper_pkg_install
   	# dh_installmanpages thinks that .so is a language.
  	install --mode=0644 debian/local/manpages/ld.so.8 debian/libc-bin/usr/share/man/man8/ld.so.8
- 	install --mode=0644 debian/FAQ debian/$(curpass)/usr/share/doc/libc-bin/README.Debian
 endef
 
 # Should each of these have per-package options?
@@ -46,7 +40,7 @@ $(patsubst %,$(stamp)binaryinst_%,$(DEB_ARCH_REGULAR_PACKAGES) $(DEB_INDEP_REGUL
 	dh_installman -p$(curpass)
 	dh_installinfo -p$(curpass)
 	dh_installdebconf -p$(curpass)
-	dh_installchangelogs -p$(curpass)
+	dh_installchangelogs -p$(curpass) debian/changelog.upstream
 	dh_installinit -p$(curpass)
 	dh_installdocs -p$(curpass) 
 	dh_link -p$(curpass)
